# voterdata

./: auth.py  data_processor.py  main.py  pyproject.toml  replit.nix  storage.py
.streamlit/: config.toml
attached_assets/: Pasted-Ah-I-see-If-you-re-looking-to-adjust-your-Replit-and-Streamlit-code-or-configuration-to-potentiall-1738842717253.txt
