[tool.poetry]
name = "bangla-text-processing"
version = "0.1.0"
description = "A Streamlit-based Bangla text processing application"
authors = ["Replit User"]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.2.3"
psycopg2-binary = ">=2.9.10"
sqlalchemy = ">=2.0.37"
streamlit = ">=1.42.0"
twilio = ">=9.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"